pkg/lsp/testdata/ub/diagnostics/valid/opaque-library-config.ub
factory: {
  inputs: {
    ext-config: { type: library-config('example.com/ext') }
  }
  imports: { ext: 'example.com/ext' }
  library-configs: { ext: input.ext-config }
}
