pkg/lsp/testdata/ub/diagnostics/invalid/project-requirement-version.ub
project: {
  requires: {
    'example.com/lib': { version: 1 }
  }
}
